--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
+    <div class="container">
+        <h1 class="turn"></div>
+        <div class="board"></div>
+    </div>
 
     <script src="javascript.js"></script>
     
