--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Char's Tic-Tac-Toe</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,6 +11,7 @@
     <div class="container">
         <h1 class="turn"></div>
         <div class="board"></div>
+        <button id="restart-btn">Restart</button>
     </div>
 
     <script src="javascript.js"></script>
